--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"format": "prettier --write {src,scripts}/**/*.ts",
 		"build:production": "rollup -c ./scripts/rollup.config.js --environment NODE_ENV:production",
 		"build": "rollup -c ./scripts/rollup.config.js",
+		"postbuild": "cp -rf ./game_resources/* ./dist/client_packages/game_resources/",
 		"watch": "rollup -w -c ./scripts/rollup.config.js"
 	},
 	"repository": {
