--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -6,7 +6,8 @@
 		"paths": {
 			"@shared/*": ["../shared/*"],
 			"@/*": ["./*"]
-		}
+		},
+		"allowJs": true
 	},
 	"include": ["./**/*.ts", "../shared/**/*.ts"],
 	"exclude": ["../shared/**/*.d.ts"]
